- Whitelist "recently touched" data structures from CSRF write protection. [lgraf]
- Bump docxcompose to 1.0.0a13 to get a numberig restart bugfix. [deiferni]
- Make the changed field a python datetime. [njohner]
- Fix Officeconnector permission checks for task documents tab actions. [Rotonen]
- Ensure clamped down enough permissions on shadow documents. [Rotonen]
- Include bumblebee_checksum to dexterity item serialization [elioschmutz]
- Include bumblebee-checksum into @listing endpoint [elioschmutz]
- Drop verbose logging for ObjectTouched events. [lgraf]
- Bump ftw.solr to 2.3.1 to get reindexObjectSecurity fix. [lgraf]
- Fix an issue when creating meetings from a template. [deiferni]
- Added indices and metadata for filesize, filename and file extension. [Rotonen]
- Fix normalizing filename for zip export. [deiferni]
- Fix rendering issue in search view. [deiferni]
- Fix rendering issue in livesearch reply view. [deiferni]
- Fix JS ordering issue: define modernizr.js position. [phgross]
- Bump docxcompose to 1.0.0a12 to get a bugfix for sections in word. [deiferni]
- Extend example-content with evil objects containing javascript. [elioschmutz]
- Escape description of document_added description object. [elioschmutz]
- Use plone.protect class of confirm-action view. [elioschmutz]
- Don't html-escape description for JSON data. [deiferni]
- Introduce custom exception for errors in processing sablon templates. [njohner]
- Assign correct roles in development content. [deiferni]
- Place successor proposal button next to workflow buttons. [Kevin Bieri]
- Remove document tooltip on touch devices. [Kevin Bieri]
- Respect ISharingConfiguration black- and white_list_prefix for selectable groups in add-team form. [elioschmutz]
- Restrict selectable orgunits on add-team form to orgunits of the current adminunit only. [elioschmutz]
- Update ftw.tabbedview to 4.1.2. [Kevin Bieri]
- Fix dispatching notifications while recording a TaskReminderActivity. [elioschmutz]