@@ -1,6 +1,7 @@
 from ftw.bumblebee.interfaces import IBumblebeeable
 from ftw.bumblebee.interfaces import IBumblebeeDocument
 from opengever.base.interfaces import IOpengeverBaseLayer
+from plone import api
 from plone.dexterity.interfaces import IDexterityContainer
 from plone.dexterity.interfaces import IDexterityContent
 from plone.restapi.serializer.dxcontent import SerializeFolderToJson
@@ -13,6 +14,11 @@ def extend_with_bumblebee_checksum(result, context):
         result['bumblebee_checksum'] = IBumblebeeDocument(context).get_checksum()
 
 
+def extend_with_relative_path(result, context):
+    url_tool = api.portal.get_tool(name='portal_url')
+    result['relative_path'] = '/'.join(url_tool.getRelativeContentPath(context))
+
+
 @adapter(IDexterityContent, IOpengeverBaseLayer)
 class GeverSerializeToJson(SerializeToJson):
 
@@ -20,11 +26,17 @@ class GeverSerializeToJson(SerializeToJson):
         result = super(GeverSerializeToJson, self).__call__(*args, **kwargs)
 
         extend_with_bumblebee_checksum(result, self.context)
+        extend_with_relative_path(result, self.context)
 
         return result
 
 
 @adapter(IDexterityContainer, IOpengeverBaseLayer)
 class GeverSerializeFolderToJson(SerializeFolderToJson):
-    """
-    """
+
+    def __call__(self, *args, **kwargs):
+        result = super(GeverSerializeFolderToJson, self).__call__(*args, **kwargs)
+
+        extend_with_relative_path(result, self.context)
+
+        return result
